# persephone

./: .dockerignore  .gitignore  README.md  pyproject.toml
.ralph-tui/: config.toml  progress.md  session-meta.json  session.json
authtest/: __init__.py  __main__.py  app.py
authtest/cli/: __init__.py  certs.py  compare.py  config.py  db.py  history.py  main.py  serve.py  test.py
authtest/core/: __init__.py  auth.py  config.py  logging.py
authtest/core/crypto/: __init__.py  certs.py  tokens.py
authtest/core/oidc/: __init__.py  client.py  flows.py  utils.py  validation.py
authtest/core/saml/: __init__.py  artifact.py  flows.py  logout.py  manipulation.py  signature.py  sp.py  utils.py
authtest/idp_presets/: __init__.py  adfs.py  auth0.py  azure_ad.py  discovery.py  google.py  jumpcloud.py  keycloak.py  okta.py  onelogin.py  ping_federate.py
authtest/reports/: __init__.py  compare.py  html.py  json.py  pdf.py
authtest/storage/: __init__.py  database.py  models.py
authtest/storage/migrations/: __init__.py
authtest/storage/migrations/versions/: v001_initial_schema.py  v002_auth_tables.py
authtest/web/: __init__.py
authtest/web/routes/: __init__.py  auth.py  certs.py  compare.py  config.py  history.py  oidc.py  saml.py  tools.py
authtest/web/static/css/: tailwind.min.css
authtest/web/static/js/: theme.js
authtest/web/templates/: base.html  index.html  login.html  setup.html
authtest/web/templates/certs/: generate.html  import.html  index.html  validate.html  view.html
authtest/web/templates/compare/: baseline.html  baseline_select.html  diff.html  index.html
authtest/web/templates/config/: add.html  add_oidc.html  add_saml.html  edit_oidc.html  edit_saml.html  index.html  view.html
authtest/web/templates/history/: export.html  index.html  show.html
authtest/web/templates/oidc/: authorization_code.html  client_credentials.html  client_credentials_result.html  device_code.html  device_code_poll.html  device_code_result.html  implicit.html  implicit_callback.html  implicit_result.html  index.html  result.html
authtest/web/templates/saml/: artifact.html  idp_initiated.html  index.html  result.html  slo.html  slo_info.html  slo_result.html  sp_initiated.html
authtest/web/templates/tools/: index.html  jwt.html  key_generated.html  saml.html
docker/: Dockerfile  docker-compose.yml
docs/: cli-reference.md  web-ui-guide.md
docs/idp-setup/: README.md  keycloak.md
tests/: __init__.py  conftest.py  test_app.py  test_cli.py  test_oidc_validation.py  test_protocol_logging.py
